# backend/src/controllers/activity/DeleteActivityController.ts
@@ -1,13 +1,17 @@
 import { Request, Response } from "express";
 import { DeleteActivityService } from "../../services/activity/DeleteActivityService";
+import { DeleteActivityRequest } from "../../models/interfaces/activity/DeleteActivityRequest";
 
 class DeleteActivityController {
     async handle(request: Request, response: Response){
-        const activity_id = request.query.activity_id as string;
-        const deleteProdcutService = new DeleteActivityService();
-
-        const activityDeleted = await deleteProdcutService.execute({ activity_id });
-        return response.json(activityDeleted);
+        try {
+            const activity_id:DeleteActivityRequest = request.body;
+            const deleteProdcutService = new DeleteActivityService();
+            const activityDeleted = await deleteProdcutService.execute( activity_id );
+            response.status(200).json(activityDeleted);
+        } catch (error) {
+            response.status(400).json({ error: error.message });
+        }
     }
 }
 
